package demo.ht.com.design_pattern.observer_pattern;

/**
 * @author 86177
 * @ClassName Observer
 * 时间: 2021/1/21 13:29
 */
public interface Observer {
    public void update();
}
